# foodie-app

backend/: .gitignore  pyproject.toml  test_embeddings.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/schemas/: recommendation.py
backend/app/services/: foursquare_service.py  recommendation_service.py
